--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "config": "^3.3.9",
     "discord.js": "^14.11.0",
     "fluent-ffmpeg": "^2.1.2",
+    "https": "^1.0.0",
     "openai": "^3.2.1",
     "telegraf": "^4.12.2",
     "tesseract.js": "^4.0.5"
